Add body properties (#23 - #36)
Add background color and image (#24-#28)
and flex (#32 - #35)

--- a/style.css
+++ b/style.css
@@ -20,6 +20,20 @@
     --font-color-h: hsl(223, 47%, 23%);
 }
 
+body {
+    background-color: var(--primary-color);
+    background-image: url(images/pattern-background-desktop.svg);
+    background-position: top;
+    background-repeat: no-repeat;
+    background-size: auto;
+    min-height: 100vh;
+    text-align: center;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
 
 .attribution { font-size: 11px; text-align: center; }
 .attribution a { color: hsl(228, 45%, 44%); }
