--- a/style.css
+++ b/style.css
@@ -26,14 +26,52 @@ body {
     background-position: top;
     background-repeat: no-repeat;
     background-size: auto;
+    font-family: 'Red Hat Display', sans-serif;
     min-height: 100vh;
     text-align: center;
 
     display: flex;
     flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+}
+
+main {
+    flex: 1;
+    
+    display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
 }
+
+/* *-*-*-*-*-*-*-*-*-*-*-*-* Main Styling*-*-*-*-*-*-*-*-*-*-*-*-* */
+
+section.card,
+div.card__hero-img {
+    width: 45rem;
+}
+
+section.card {
+    background-color: white;
+    border-radius: 1.5rem;
+    height: 68.4rem;
+    overflow: hidden;
+}
+
+div.card__hero-img {
+    background-image: url(images/illustration-hero.svg);
+    background-position: center;
+    height: 22rem;
+    margin-bottom: 5rem;
+}
+
+div.card__content {
+    margin: auto;
+    width: 80%;
+}
+
+
 
 .attribution { font-size: 11px; text-align: center; }
 .attribution a { color: hsl(228, 45%, 44%); }
