--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ body {
     background-image: url(images/pattern-background-desktop.svg);
     background-position: top;
     background-repeat: no-repeat;
-    background-size: auto;
+    background-size: contain;
     font-family: 'Red Hat Display', sans-serif;
     min-height: 100vh;
     text-align: center;
@@ -38,7 +38,7 @@ body {
 
 main {
     flex: 1;
-    
+
     display: flex;
     flex-direction: column;
     justify-content: center;
