--- a/style.css
+++ b/style.css
@@ -56,6 +56,13 @@ button a {
     text-decoration: none;
 }
 
+button {
+    height: 4.8rem;
+    border-radius: 1rem;
+    border-style: none;
+    margin-bottom: 1rem;
+}
+
 h1 {
     color: var(--font-color-h);
     font-size: 2.7rem;
@@ -91,7 +98,7 @@ div.card__hero-img {
     background-image: url(images/illustration-hero.svg);
     background-position: center;
     height: 22rem;
-    margin-bottom: 6rem;
+    margin-bottom: 4.5rem;
 }
 
 div.card__content {
@@ -107,7 +114,7 @@ div.card__description {
 div.card__plan {
     background-color: var(--secondary-color);
     border-radius: 1rem;
-    height: 6.6rem;
+    height: 9rem;
     margin-bottom: 3rem;
 
     display: flex;
@@ -148,6 +155,25 @@ div.card__plan-change a {
 div.card__btn {
     display: flex;
     flex-direction: column;
+}
+
+button.card__btn-pay {
+    background-color: var(--button-color);
+    -webkit-box-shadow: 0px 0.5rem 2.5rem -0.7rem var(--font-color-p);
+    -moz-box-shadow: 0px 0.5rem 2.5rem -0.7rem var(--font-color-p);
+    box-shadow: 0px 5px 25px -7px var(--font-color-p);
+}
+
+button.card__btn-pay a {
+    color: white;
+}
+
+button.card__btn-cancel {
+    background-color: transparent;
+}
+
+button.card__btn-cancel a {
+    color: var(--font-color-p);
 }
 
 div.attribution { 
