--- a/style.css
+++ b/style.css
@@ -28,9 +28,10 @@ body {
     background-size: contain;
     font-family: 'Red Hat Display', sans-serif;
     line-height: 1.5;
+    margin: auto;
     min-height: 100vh;
     text-align: center;
-
+    
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -39,7 +40,6 @@ body {
 
 main {
     flex: 1;
-
     display: flex;
     flex-direction: column;
     justify-content: center;
