--- a/style.css
+++ b/style.css
@@ -64,19 +64,18 @@ button {
     margin-bottom: 1rem;
 }
 
+h1, h2 {
+    font-weight: 900;
+}
+
 h1 {
     color: var(--font-color-h);
     font-size: 2.7rem;
-    font-weight: 900;
     margin-bottom: 2rem;
 }
 
 h2, p {
     font-size: 1.7rem;
-}
-
-h2 {
-    font-weight: 900;
 }
 
 p {
