--- a/style.css
+++ b/style.css
@@ -95,6 +95,10 @@ section.card {
     border-radius: 1.5rem;
     height: 68.4rem;
     overflow: hidden;
+
+    -webkit-box-shadow: 0px 9px 50px -30px var(--button-color);
+    -moz-box-shadow: 0px 9px 50px -30px var(--button-color);
+    box-shadow: 0px 9px 50px -30px var(--button-color);
 }
 
 div.card__hero-img {
